# eda-esterilizaciones-peru

./: README.md  eda_mimp.ipynb  main.py  pyproject.toml
data/: mimp_esterilizaciones.csv
